--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>0.16</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
